# GreatJeans

./: .gitignore  CONNECTIVITY_FIXES.md  Dockerfile  NA12878_demo.vcf  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  results_demo.json  sample_23andme.txt
backend/: annotate_local.py  api.py  catalogs.py  config.py  models.py  parser_23andme.py  parser_vcf.py  pgs_calc.py  protein_map.py  storage.py  utils.py
backend/analysis/: __init__.py  analysis_types.py  annotate.py  contract.py  entrypoint.py  links.py  pgs.py  pipeline.py  protein.py  ss_model.py  ss_model_broken.py  ss_model_fixed.py  types.py  utils.py  windows.py
backend/data/: aa_windows.json  clinvar_light.csv  pgs_bmi_small.csv  protein_map.csv  ss_head.joblib  ss_train.csv  traits_catalog.csv
explainer/: Dockerfile  app.py  llm_explainer.py  requirements.txt
explainer/samples/: pred_sample.json  pred_sample_long.json
explainer/tests/: test_explainer.py
frontend/: Dockerfile  jest.config.json  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.cjs
frontend/.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.js  routes-manifest.json  trace
frontend/__tests__/: InfoButton.test.tsx  InsightsPanel.test.tsx  (+4 more)
scripts/: dev.sh  smoke.sh
static-demo/: index.html  index_optimized.html  styles.css  test.html
test_data/: demo.vcf
tests/: test_annotate.py  test_api.py  test_catalogs.py  test_contract.py  test_parsers.py  test_pgs.py  test_pipeline.py  test_protein.py  test_result_contract.py  test_ss_model.py
(+62 files in other folders)
