[project]
name = "greatjeans"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "pandas",
  "numpy==1.26.4",
  "python-multipart",
  "cyvcf2",
  "python-dotenv==1.0.1",
  "huggingface_hub==0.24.5",
  "openai==1.37.1",
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
